[gd_scene load_steps=11 format=2]

[ext_resource path="res://MailFetcher.gd" type="Script" id=1]
[ext_resource path="res://ReadEmailExample.py" type="Script" id=2]
[ext_resource path="res://fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Styles/DefaultTextStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://Styles/DefaultTextEntryStyle.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.25098, 0.215686, 0.282353, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
shadow_size = 2

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 1
outline_color = Color( 0.45098, 0.388235, 0.509804, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Card1" type="Control"]
margin_right = 1082.0
margin_bottom = 758.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = -200.0
margin_right = 916.0
margin_bottom = 914.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
visible = false
margin_right = 113.0
margin_bottom = 1000.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_styles/panel = SubResource( 1 )

[node name="PanelContainer3" type="PanelContainer" parent="HBoxContainer"]
visible = false
margin_right = 129.0
margin_bottom = 1000.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_styles/panel = SubResource( 1 )

[node name="Color" type="Panel" parent="HBoxContainer"]
margin_right = 684.0
margin_bottom = 1114.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_styles/panel = SubResource( 2 )

[node name="SocialMailCard" type="VBoxContainer" parent="HBoxContainer/Color"]
margin_left = 15.0
margin_top = 15.0
margin_right = 666.0
margin_bottom = 1102.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="PyNode" type="Node2D" parent="HBoxContainer/Color/SocialMailCard"]
script = ExtResource( 2 )

[node name="From" type="RichTextLabel" parent="HBoxContainer/Color/SocialMailCard"]
margin_right = 651.0
margin_bottom = 103.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.964706, 0.941176, 1, 1 )
bbcode_enabled = true
bbcode_text = "Please wait a moment"
text = "Please wait a moment"
scroll_active = false

[node name="Subject" type="RichTextLabel" parent="HBoxContainer/Color/SocialMailCard"]
margin_top = 113.0
margin_right = 651.0
margin_bottom = 216.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0.815686, 0.792157, 0.886275, 1 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"
scroll_active = false

[node name="ImageBox" type="HBoxContainer" parent="HBoxContainer/Color/SocialMailCard"]
visible = false
margin_top = 134.0
margin_right = 651.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Color/SocialMailCard/ImageBox"]
margin_right = 539.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="MultiImageBox" type="VBoxContainer" parent="HBoxContainer/Color/SocialMailCard/ImageBox"]
visible = false
margin_left = 543.0
margin_right = 651.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="RichTextLabel" parent="HBoxContainer/Color/SocialMailCard"]
margin_top = 226.0
margin_right = 651.0
margin_bottom = 744.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_styles/normal = ExtResource( 5 )
bbcode_enabled = true
tab_size = 0
text = "













































"
selection_enabled = true

[node name="Date" type="RichTextLabel" parent="HBoxContainer/Color/SocialMailCard"]
margin_top = 754.0
margin_right = 651.0
margin_bottom = 857.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[right] "
text = " "

[node name="Reply" type="TextEdit" parent="HBoxContainer/Color/SocialMailCard"]
margin_top = 867.0
margin_right = 651.0
margin_bottom = 970.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = ExtResource( 6 )
text = " "

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/Color/SocialMailCard"]
margin_top = 980.0
margin_right = 651.0
margin_bottom = 1087.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Error" type="RichTextLabel" parent="HBoxContainer/Color/SocialMailCard/Buttons"]
margin_right = 431.0
margin_bottom = 107.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true

[node name="Reply" type="Button" parent="HBoxContainer/Color/SocialMailCard/Buttons"]
margin_left = 435.0
margin_right = 651.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reply"

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
margin_left = 688.0
margin_right = 916.0
margin_bottom = 1114.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
[connection signal="focus_entered" from="HBoxContainer/Color/SocialMailCard/Reply" to="HBoxContainer/Color/SocialMailCard" method="_on_Reply_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/Color/SocialMailCard/Reply" to="HBoxContainer/Color/SocialMailCard" method="_on_Reply_focus_exited"]
[connection signal="pressed" from="HBoxContainer/Color/SocialMailCard/Buttons/Reply" to="HBoxContainer/Color/SocialMailCard" method="_on_Reply_pressed"]
